# SP26-CS465-Calderon

./: .gitignore  README.md  deep-research-report.md  pyproject.toml
configs/profiles/: study-safe.toml  window-manager.toml
dev/active/cs465-airdesk/: architecture.md  context-reset-prompt.md  context.md  dynamic-gesture-research.md  handoff-prompt.md  (+13 more)
paper/: README.md
paper/PDFs-LiteratureSurvey/: README.md
paper/drafts/: outline.md
paper/final-package/: zip-checklist.md
paper/findings/: evidence-log.md  pilot-plan.md
paper/latex-source/: README.md  main.tex  references.bib
paper/research/: example-paper-notes.md  literature-matrix.md  related-work-synthesis.md  rubric-notes.md  source-tracker.md
paper/videos/: video-plan.md
scripts/: airdesk-nvidia-mediapipe-wayland  train-ipn-all-tcn-v2.sh
src/airdesk/: __init__.py  cli.py  cli_gesture_replay.py  cli_labeling.py  cli_live.py  cli_live_commands.py  cli_public_data.py  cli_recording.py  cli_runtime.py  cli_support.py  cli_system.py  cli_tcn.py  cli_tracking.py  feature_streams.py  runtime.py
studies/: pilot-0.md
tests/: conftest.py  test_actions.py  test_analysis.py  test_capture_opencv.py  test_cli.py  test_command_mode.py  test_control.py  test_cursor.py  test_dtw.py  test_evaluation.py  test_event_decoder.py  test_features.py  test_gestures.py  test_labels.py  test_learned_filter.py  test_ml_dataset.py  test_motion.py  test_profile_resolver.py  test_profiles.py  test_public_datasets.py  test_recording.py  test_runtime.py  test_tracking_mediapipe.py
tests/fixtures/: replay-one-frame.jsonl
(+66 files in other folders)
