[project]
name = "airdesk"
version = "0.1.0"
description = "A pluggable spatial input layer for Hyprland desktop control research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
]

[project.scripts]
airdesk = "airdesk.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

